# city-pulse

./: .dockerignore  .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml
.github/: pull_request_template.md
.github/workflows/: ci.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/v1/: health.py
backend/app/core/: config.py  logging.py
backend/tests/unit/: test_health.py
docker/postgres/: init.sql
documents/: 01_PRD.md  02_TRD.md  03_SRS.md  04_User_Stories_and_Acceptance_Criteria.md  05_UI_UX_Wireframes.md  06_Information_Architecture.md  07_Database_Design_ER.md  08_System_Architecture.md  09_API_Specification.md  10_Security_Requirements.md  11_Test_Plan.md  12_Project_Plan_Roadmap.md  13_Risk_Assessment.md  14_Deployment_DevOps_Plan.md  PROJECT_TASK_LIST.md
frontend/: Dockerfile  package-lock.json  package.json  vitest.config.ts
frontend/app/: page.tsx
frontend/app/(dashboard)/admin/: page.tsx
frontend/app/(dashboard)/benchmark/: page.tsx
frontend/app/(dashboard)/chat/: page.tsx
frontend/app/(dashboard)/dashboard/: page.tsx
frontend/app/(dashboard)/dispatch/: page.tsx
frontend/app/(dashboard)/feed/: page.tsx
frontend/app/(dashboard)/reports/weekly/: page.tsx
frontend/app/(public)/login/: page.tsx
frontend/app/(public)/report/: page.tsx
frontend/app/api/health/: route.ts
frontend/lib/: api.test.ts  api.ts
